tests/neg/array.stk
type IntArray =
  object {
    def length: Int
    def set(i: Int, value: Int): Unit
    def apply(i: Int): Int
  }

type A =
  object {
    def length: Int
  }

type B =
  object {
    def set(i: Int, value: Int): Unit
  }

type C =
  object {
    def apply(i: Int): Int
  }

def main =
  val arr: Array[Int] = Array.create[Int] 3

  val f: IntArray = arr // error
  val a: A = arr // error
  val b: B = arr // error
  val c: C = arr // error

  Array > begin
    set arr 0 10
    set arr 1 12
    set arr 2 14
